--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -175,14 +175,15 @@
         <div id="adianti_right_panel" class="right-panel"></div>
       </div><!-- /.content-wrapper -->
       <footer class="main-footer">
-        <div class="pull-right hidden-xs">
+        <!-- <div class="pull-right hidden-xs">
           <b>Version</b> x.y.z
         </div>
         <strong>{userunitid} - {userunitname}</strong>
-        <!--[IFADMIN]-->
+       
         <a style="cursor:pointer; color: teal" generator="adianti" href="index.php?class=SystemModulesCheckView&adianti_open_tab=1&adianti_tab_name=PHP%20Modules"> <i class="fa fa-code" aria-hidden="true"></i> PHP Modules </a> &nbsp;&nbsp;
         <span style="cursor:pointer; color: teal" onclick="Adianti.showDebugPanel()"> <i class="fa fa-window-maximize" aria-hidden="true"></i> Debug Console </span>
-        <!--[/IFADMIN]-->
+       
+         -->
       </footer>
       
       <div id="adianti_debug_panel" class="debug-panel">
