--- a/app/templates/theme3/public.html
+++ b/app/templates/theme3/public.html
@@ -99,12 +99,12 @@
         
         <div id="adianti_right_panel" class="right-panel"></div>
       </div><!-- /.content-wrapper -->
-      <footer class="main-footer">
+      <!-- <footer class="main-footer">
         <div class="pull-right hidden-xs">
           <b>Version</b> x.y.z
         </div>
         <strong>Footer</strong>
-      </footer>
+      </footer> -->
       
       <!-- Add the sidebar's background. This div must be placed
            immediately after the control sidebar -->
