--- a/app/templates/theme3/css/custom.css
+++ b/app/templates/theme3/css/custom.css
@@ -19,7 +19,7 @@ section.content
 
 .content-wrapper
 {
-    background-color: #f3f3f3 !important;
+    background-color: #b33b3b !important;
 }
 
 .layout-boxed {
