--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -67,14 +67,13 @@
   <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
 
-      <header class="main-header">
+      <header class="main-header "  >
         <!-- Logo -->
-        <div target="newwindow" class="logo">
+        <div target="newwindow" class="logo" >
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <div class="logo-mini"><img style="height: 50px; width: 50px;" src="../../../app/images/logo/uj-mine-logo.png"/></div>
+          <div class="logo-mini"><img style="height: 50px; width: 50px;" src="app\images\logo\uj-logo-grande.png"/></div>
           <!-- logo for regular state and mobile devices -->
-          <div class="logo-lg"><img src="../../../app/images/logo/uj-logo-grande.png"></div>
-        </div>
+          <div class="logo-lg"><img  style="height: 50px; width: auto;" src="app\images\logo\logouj.png"
         
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
