--- a/app/templates/theme3/css/AdminLTE.css
+++ b/app/templates/theme3/css/AdminLTE.css
@@ -118,6 +118,7 @@ body {
   top: 0;
   right: 0;
   left: 0;
+  
 }
 .fixed .content-wrapper,
 .fixed .right-side {
@@ -195,7 +196,7 @@ a:focus {
  */
 .main-header {
   position: relative;
-  max-height: 100px;
+  /* max-height: 100px; */
   z-index: 1030;
 }
 .main-header > .navbar {
