--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -67,13 +67,15 @@
   <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
 
-      <header class="main-header "  >
+      <header class="main-header">
         <!-- Logo -->
-        <div target="newwindow" class="logo" >
+        <div target="newwindow" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <div class="logo-mini"><img style="height: 50px; width: 50px;" src="app\images\logo\uj-logo-grande.png"/></div>
+          <div class="logo-mini"><img style="height: 50px; width: 50px;" src="../../../app/images/logo/uj-mine-logo.png"/></div>
           <!-- logo for regular state and mobile devices -->
-          <div class="logo-lg"><img  style="height: 50px; width: auto;" src="app\images\logo\logouj.png"
+          <div class="logo-lg"><img style="height: 50px; width: auto;" src="app\images\logo\logouj.png" /></div>
+
+        </div>
         
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
@@ -174,15 +176,14 @@
         <div id="adianti_right_panel" class="right-panel"></div>
       </div><!-- /.content-wrapper -->
       <footer class="main-footer">
-        <!-- <div class="pull-right hidden-xs">
+        <div class="pull-right hidden-xs">
           <b>Version</b> x.y.z
         </div>
         <strong>{userunitid} - {userunitname}</strong>
-       
+        <!--[IFADMIN]-->
         <a style="cursor:pointer; color: teal" generator="adianti" href="index.php?class=SystemModulesCheckView&adianti_open_tab=1&adianti_tab_name=PHP%20Modules"> <i class="fa fa-code" aria-hidden="true"></i> PHP Modules </a> &nbsp;&nbsp;
         <span style="cursor:pointer; color: teal" onclick="Adianti.showDebugPanel()"> <i class="fa fa-window-maximize" aria-hidden="true"></i> Debug Console </span>
-       
-         -->
+        <!--[/IFADMIN]-->
       </footer>
       
       <div id="adianti_debug_panel" class="debug-panel">
