--- a/app/templates/theme3/public.html
+++ b/app/templates/theme3/public.html
@@ -35,9 +35,9 @@
         <!-- Logo -->
         <div target="newwindow" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <div class="logo-mini"><img style="height: 50px; width: 50px;" src="../../../app/images/logo/uj-mine-logo.png"/></div>
+          <div class="logo-mini"><img style="height: 50px; width: 50px;" src="app\images\logo\logouj.png"/></div>
           <!-- logo for regular state and mobile devices -->
-          <div class="logo-lg"><img src="../../../app/images/logo/uj-logo-grande.png"></div>
+          <div class="logo-lg"><img src="app\images\logo\logouj.png"></div>
         </div>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
