--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -71,7 +71,7 @@
         <!-- Logo -->
         <div target="newwindow" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <div class="logo-mini"><img style="height: 50px; width: 50px;" src="../../../app/images/logo/uj-mine-logo.png"/></div>
+          <div class="logo-mini"><img style="height: 50px; width: 50px;" src="app\images\logo\uj-logo-mine.png"/></div>
           <!-- logo for regular state and mobile devices -->
           <div class="logo-lg"><img style="height: 50px; width: auto;" src="app\images\logo\logouj.png" /></div>
 
